# iPodSyncer

./: .gitignore  FEASIBILITY.md  README.md  pyproject.toml
plans/: ipodsyncer-v0.1.md
scripts/: bootstrap.sh
src/ipodsync/: __init__.py  add.py  cli.py  config.py  doctor.py  ls.py  playlist.py  restore.py  rm.py  sync.py
src/ipodsync/device/: __init__.py  detect.py  gpod.py  mount.py  ops.py  snapshot.py  sysinfo.py
src/ipodsync/pipeline/: __init__.py  artwork.py  probe.py  transcode.py
