[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipodsync"
version = "0.1.0.dev0"
description = "macOS CLI for syncing music, podcasts, and audiobooks to iPod Classic 6G"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kristian Jacobsen" }]
license = "MIT"
dependencies = [
    "typer>=0.12",
    "mutagen>=1.47",
    "Pillow>=10.0",
    "libusb1>=3.0",  # macOS-side SysInfoExtended probe (iPod USB bus/addr lookup)
    # python-gpod is built from source via scripts/bootstrap.sh; not on PyPI.
]

[project.scripts]
ipodsync = "ipodsync.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
# python-gpod and the native libgpod.dylib are built from source by
# scripts/bootstrap.sh and dropped into .venv directly. They are not on
# PyPI and must not be pruned by uv on subsequent syncs.
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipodsync"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["ipodsync"]
